# augmentedDevice

./: .gitignore  README.md  favorite.json  forge.config.js  index.html  main.js  package-lock.json  package.json  renderer.js  style.css
.github/workflows/: build.yml  release.yml
browser/: index.html  renderer.js  style.css
docs/: problem.md
resources/: icon.icns
src/: bookmarks.json  index.html  index.js  main.ts  preload.ts  renderer.js  renderer.ts  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/types/: types.d.ts
src/utils/: background.js  background.ts  bookmark.ts  browser.js  browser.ts  dom.ts  favorites.ts
utils/: background.js  browser.js  favorites.js
