[package]
name = "augmenteddevice"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
raw-window-handle = { version = "0.6.0", features = ["std"] }
tao = { version = "0.24.0", features = ["rwh_05"] }
tao-macros = "0.1.2"
winit = { version = "0.29.9", features = ["rwh_05"] }
wry = "0.35.2"
